--- a/pages/testSancode/testSancode.wxss
+++ b/pages/testSancode/testSancode.wxss
@@ -1,1 +1,72 @@
 /* pages/testSancode/testSancode.wxss */
+
+page {
+    background: rgb(236, 238, 243)
+}
+
+.content{
+  width:100%;
+  height:840rpx;
+  text-align:center; 
+}
+
+.img{
+  width:100%;
+}
+
+.img .nuo-tit{
+  color:#373a3c;
+  font-size: 40rpx;
+  padding-top:62rpx;
+}
+
+.nuo-grey{
+  color:#878a8c;                 
+  font-size:36rpx;
+  line-height:128rpx;
+}
+
+.img image{
+  width:54%;
+  height:410rpx;
+  margin-bottom:69rpx;
+}
+
+.text{
+  width:95%;
+  margin:0 auto;
+}
+
+.text-grey{
+  color:#878a8c;
+  font-size:30rpx;
+  font-weight:400;
+}
+
+.text-grey .text-red{
+  color:#f63828;
+  display: inline;
+}
+
+.btm-btton{
+  width:96%;
+  margin:0 auto;
+}
+
+.btm-btton .apply{
+  color:#fff;
+  background:#3e63a2;
+}
+
+.btm-btton .del{
+  color:#3e63a2;
+  background:#fff;
+  margin-top:40rpx;
+}
+
+.customer{
+  color:#aaadaf;
+  font-size:32rpx;
+  text-align:center;
+  line-height:120rpx;
+}
