--- a/app.wxss
+++ b/app.wxss
@@ -1,14 +1,17 @@
 /**app.wxss**/
+
+@import "/template/wetoast/wetoast.wxss";
 page {
     height: 100%;
     font-family: "Microsoft YaHei";
 }
+
 .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 200rpx 0;
+    box-sizing: border-box;
+}
