--- a/pages/getMyCard/getMyCard.wxss
+++ b/pages/getMyCard/getMyCard.wxss
@@ -68,14 +68,66 @@ page {
 .buy-num {
     height: 96rpx;
     width: 100%;
+    padding: 0 30rpx;
+    box-sizing: border-box;
     background: #FFFFFF;
-    margin: 20rpx 0
+    margin: 20rpx 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buy-num-right {
+    width: 200rpx;
+    height: 50rpx;
+    border: #333333 solid 1rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.num-left,
+.num-right {
+    height: 50rpx;
+    width: 30%;
+    line-height: 50rpx;
+    text-align: center;
+}
+
+.num-cont {
+    width: 40%;
+    height: 50rpx;
+    border-left: #333333 solid 1rpx;
+    border-right: #333333 solid 1rpx;
+}
+
+.num-cont input {
+    height: 50rpx;
+    line-height: 50rpx;
+    width: 100%;
+    text-align: center
 }
 
 .buy-input {
     height: 96rpx;
     width: 100%;
+    padding: 0 30rpx;
+    box-sizing: border-box;
     background: #FFFFFF;
+    border-bottom: rgb(236, 238, 243) solid 1rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buy-input input {
+    width: 500rpx;
+    height: 96rpx;
+}
+
+.item-title {
+    font-size: 35rpx;
+    color: #333333
 }
 
 .btm {
