--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -18,8 +18,8 @@
     <view class="btn">
         <button form-type="submit" hover-class="none" bindtap="e_scanCode">领取我的挪车码</button>
     </view>
-    <view class="experience" bindtap="e_online">
-        线上体验
+    <view class="experience">
+        <button class="item-bg" hover-class="none" open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">线上体验</button>
     </view>
     <view class="flow">
         <view class="box">
