--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -95,10 +95,16 @@ page {
     width: 100%;
     height: 100rpx;
     line-height: 100rpx;
+}
+
+.item-bg {
+    background: none;
+    border: none;
     color: #FFFFFF;
     font-size: 35rpx;
     text-align: center;
-    text-decoration: underline
+    text-decoration: underline;
+    position: inherit
 }
 
 .flow {
