--- a/pages/putForward/putForward.wxml
+++ b/pages/putForward/putForward.wxml
@@ -1,9 +1,10 @@
 <!--pages/putForward/putForward.wxml-->
-
+<import src="/template/wetoast/wetoast.wxml" />
+<template is="wetoast" data="{{...__wetoast__}}" />
 <view class="content">
-    <view class="cont-text">累计收益（元）</view>    
+    <view class="cont-text">累计收益（元）</view>
     <view class="money">{{money}}</view>
     <view>
-      <button class="applyPut">申请提现</button>
-    </view>    
+        <button class="applyPut">申请提现</button>
+    </view>
 </view>
