--- a/pages/getMyCard/getMyCard.wxml
+++ b/pages/getMyCard/getMyCard.wxml
@@ -1,4 +1,6 @@
 <!--pages/getMyCard/getMyCard.wxml-->
+<import src="/template/wetoast/wetoast.wxml" />
+<template is="wetoast" data="{{...__wetoast__}}" />
 <view class="top">
     <view class="conten">
         <view class="img">
@@ -18,39 +20,39 @@
 <view class="buy-num">
     <view class="item-title">购买数量</view>
     <view class="buy-num-right">
-        <view class="num-left">-</view>
+        <view class="num-left" bindtap="minusNum">-</view>
         <view class="num-cont">
-            <input type="number" value="{{fullName}}" bindinput="bindNumInput" />
+            <input type="number" value="{{postJosn.CarNum}}" bindinput="bindCarNum" />
         </view>
-        <view class="num-right">+</view>
+        <view class="num-right" bindtap="plusNum">+</view>
     </view>
 </view>
 
 <view class="buy-input">
     <view class="item-title">车辆品牌</view>
-    <input type="text" value="{{fullName}}" bindinput="bindNumInput" />
+    <input type="text" value="{{postJosn.fullName}}" bindinput="bindCarNo" />
 </view>
 <view class="buy-input">
     <view class="item-title">收件人</view>
-    <input type="text" />
+    <input type="text" value="{{postJosn.persoName}}" bindinput="bindPersoName" />
 </view>
 <view class="buy-input">
     <view class="item-title">收获地址</view>
-    <input type="text" />
+    <input type="text" value="{{postJosn.address}}" bindinput="bindAddress" />
 </view>
 <view class="buy-input">
     <view class="item-title">联系电话</view>
-    <input type="number" />
+    <input type="number" value="{{postJosn.phone}}" bindinput="bindPhone" />
 </view>
 <view class="buy-input">
     <view class="item-title">备注</view>
-    <input type="text" />
+    <input type="text" value="{{postJosn.remak}}" bindinput="bindRemak" />
 </view>
 
 <view class="btm">
     <view class="btm-text">注：收到挪车码后请您先扫描进行绑定车辆和手机信息，绑定后方可使用，如有疑问请查看<text>常见问题</text></view>
     <view class="btm-btton">
-        <view class="left">服务费：19.8元</view>
-        <view class="right">立即申请</view>
+        <view class="left">服务费：{{totalPrices}}元</view>
+        <view class="right" bindtap="giveMyCard">立即申请</view>
     </view>
 </view>
