--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -78,7 +78,8 @@ page {
     justify-content: center;
     align-items: center;
     padding: 10rpx 90rpx;
-    box-sizing: border-box
+    box-sizing: border-box;
+    z-index: 10000;
 }
 
 .btn button {
@@ -98,13 +99,18 @@ page {
 }
 
 .item-bg {
-    background: none;
-    border: none;
+    /* background: rgba(44, 67, 135, 0);
+    border: 1rpx solid rgba(44, 67, 135, 0); */
     color: #FFFFFF;
     font-size: 35rpx;
     text-align: center;
     text-decoration: underline;
-    position: inherit
+    background: none
+}
+
+.item-bg::after {
+    border: none;
+    outline: none;
 }
 
 .flow {
