--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,4 +1,6 @@
 <!--pages/my/my.wxml-->
+<import src="/template/wetoast/wetoast.wxml" />
+<template is="wetoast" data="{{...__wetoast__}}" />
 <view class="top">
     <view class="userinfo">
         <view class="userinfo-avatar">
