--- a/pages/orderList/orderList.wxml
+++ b/pages/orderList/orderList.wxml
@@ -8,22 +8,22 @@
         <view class="order">
             <view class="order-top">
                 <view class="order-time">下单时间</view>
-                <view class="order-time">{{item.orderTime}}</view>
-                <view class="{{item.orderStatus == 0 ? 'order-success':'order-unpay'}}">{{item.orderStatus == 0 ? '已成功' : '未付款'}}</view>
+                <view class="order-time">{{item.create_time}}</view>
+                <view class="{{item.status_name == '已成功' ? 'order-success':'order-unpay'}}">{{item.status_name}}</view>
             </view>
             <view class="order-btm">
                 <view class="order-btm-left">
-                    <image src="{{item.orderImg}}"></image>
+                    <image src="{{item.photo_url}}"></image>
                 </view>
                 <view class="order-btm-mod">
                     <view class="tit">挪车贴</view>
                     <view class="oth">
                         <view class="oth-txt">购买数量</view>
-                        <view class="oth-num">{{item.orderNum}}</view>
+                        <view class="oth-num">{{item.buy_num}}</view>
                     </view>
                     <view class="oth">
                         <view class="oth-txt">联系电话</view>
-                        <view class="oth-num">{{item.tel}}</view>
+                        <view class="oth-num">{{item.contact_phone}}</view>
                     </view>
                 </view>
                 <view class="order-btm-right">
