--- a/pages/getMyCard/getMyCard.wxml
+++ b/pages/getMyCard/getMyCard.wxml
@@ -37,7 +37,7 @@
     <input type="text" value="{{postJosn.persoName}}" bindinput="bindPersoName" />
 </view>
 <view class="buy-input">
-    <view class="item-title">收获地址</view>
+    <view class="item-title">收货地址</view>
     <input type="text" value="{{postJosn.address}}" bindinput="bindAddress" />
 </view>
 <view class="buy-input">
@@ -50,7 +50,7 @@
 </view>
 
 <view class="btm">
-    <view class="btm-text">注：收到挪车码后请您先扫描进行绑定车辆和手机信息，绑定后方可使用，如有疑问请查看<text>常见问题</text></view>
+    <view class="btm-text">注：收到挪车码后请您先扫描进行绑定车辆和手机信息，绑定后方可使用，如有疑问请查看<text bindtap="openFqa">常见问题</text></view>
     <view class="btm-btton">
         <view class="left">服务费：{{totalPrices}}元</view>
         <view class="right" bindtap="giveMyCard">立即申请</view>
