--- a/pages/putForward/putForward.wxml
+++ b/pages/putForward/putForward.wxml
@@ -3,8 +3,8 @@
 <template is="wetoast" data="{{...__wetoast__}}" />
 <view class="content">
     <view class="cont-text">累计收益（元）</view>
-    <view class="money">{{money}}</view>
+    <view class="money">{{income?income:'暂无收益'}}</view>
     <view>
-        <button class="applyPut">申请提现</button>
+        <button hover-class="none" class="applyPut {{income != '0.00'?'lanbei':''}}" bindtap="tixian">申请提现</button>
     </view>
 </view>
