--- a/pages/putForward/putForward.wxss
+++ b/pages/putForward/putForward.wxss
@@ -1,39 +1,43 @@
 /* pages/putForward/putForward.wxss */
 
 page {
-    background-color:#eceef3;
+    background-color: #eceef3;
 }
 
-.content{
-  width:100%;
-  height:250rpx;
-  background-color:#fff;
-  margin-top:60rpx;
-  padding-top:40rpx;
-  padding-bottom:70rpx;
-  text-align:center;
+.content {
+    width: 100%;
+    height: 250rpx;
+    background-color: #fff;
+    margin-top: 60rpx;
+    padding-top: 40rpx;
+    padding-bottom: 70rpx;
+    text-align: center;
 }
 
-.content .cont-text{
-  font-size:30rpx;
-  color:#333;  
+.content .cont-text {
+    font-size: 30rpx;
+    color: #333;
 }
 
-.content .money{
-  color:#ed483f;
-  font-size:58rpx;
-  font-weight:700;
-  margin-top:20rpx;
+.content .money {
+    color: #ed483f;
+    font-size: 58rpx;
+    font-weight: 700;
+    margin-top: 20rpx;
 }
 
-.content .applyPut{
-  width:96%;
-  color:#fff;
-  border:none;
-  outline:none;
-  font-size:30rpx;  
-  margin-top:50rpx;
-  letter-spacing:2rpx;
-  background-color:#ddd;
-  box-shadow: 0px 2px 0px 0px #d6d6d6;
+.content .applyPut {
+    width: 96%;
+    color: #fff;
+    border: #ddd;
+    outline: none;
+    font-size: 30rpx;
+    margin-top: 50rpx;
+    letter-spacing: 2rpx;
+    background-color: #ddd;
+}
+
+.content .lanbei {
+    border: #3b5998;
+    background-color: #3b5998;
 }
