--- a/pages/bindCode/bindCode.wxml
+++ b/pages/bindCode/bindCode.wxml
@@ -1,4 +1,4 @@
-<!--pages/getMyTrial/getMyTrial.wxml-->
+<!--pages/bindCode/bindCode.wxml-->
 <import src="/template/wetoast/wetoast.wxml" />
 <template is="wetoast" data="{{...__wetoast__}}" />
 <view class="binding-top">
@@ -14,11 +14,11 @@
         </view>
     </view>
     <view class="binding-conter-foot">
-        <input type="text" value="{{newPhone}}" bindinput="updatePhoneInput" placeholder="通知您绑定的手机号:{{oldPhone}}" />
+        <input type="text" value="{{newPhone}}" bindinput="updatePhoneInput" placeholder="通知您绑定的手机号" />
     </view>
 </view>
 <view class="binding-btn">
-    <view class="btn" bindtap="e_online">确认生成</view>
+    <view class="btn" bindtap="e_online">确认绑定</view>
 </view>
 <view class="service" bindtap="showActionSheet">
     点击联系客服
