--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -45,7 +45,7 @@
             <image src="/images/me_icon3.png"></image>
 
         </view>
-        <view class="item-right">
+        <view class="item-right" bindtap="showActionSheet">
             <view>联系客服</view>
             <!-- <image src="/images/me_icon4.png"></image> -->
         </view>
