--- a/app.wxss
+++ b/app.wxss
@@ -2,7 +2,10 @@
 
 @import "/template/wetoast/wetoast.wxss";
 page {
+    width:100%;
     height: 100%;
+    position: relative;
+    z-index: 1;
     font-family: "Microsoft YaHei";
 }
 
