--- a/pages/bindCode/bindCode.wxss
+++ b/pages/bindCode/bindCode.wxss
@@ -8,7 +8,7 @@ page {
 
 .binding-top {
     width: 100%;
-    height: 400rpx;
+    height: 380rpx;
     background: rgb(44, 68, 135);
 }
 
@@ -101,7 +101,7 @@ page {
 .binding-btn {
     height: 200rpx;
     width: 100%;
-    padding: 70rpx 30rpx 50rpx 30rpx;
+    padding: 50rpx 30rpx;
     box-sizing: border-box;
 }
 
@@ -123,6 +123,17 @@ page {
     font-size: 30rpx;
     color: #999999;
     text-align: center
+}
+
+.button-view::after {
+    border: none;
+    outline: none;
+}
+
+button[size=mini] {
+    color: #999999;
+    background: none;
+    padding: 0;
 }
 
 .plate-number-all {
