--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,7 +1,7 @@
 page {
     width: 100%;
     height: 100%;
-    /* background-image: linear-gradient(#3b5998, #778bb5 50%); */
+    background: rgb(45, 68, 134)
 }
 
 .conter {
@@ -142,7 +142,7 @@ page {
     background: #31518c;
     display: inline-block;
     height: 1rpx;
-    _overflow: hidden;
+    overflow: hidden;
     vertical-align: middle;
     flex-basis: 35%;
 }
@@ -164,7 +164,7 @@ page {
     line-height: 100rpx;
     text-align: center;
     color: #fff100;
-    font-size: 26rpx;
+    font-size: 34rpx;
 }
 
 .explain {
