--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -106,6 +106,23 @@ page {
     border-bottom: 1rpx solid #eeeeee
 }
 
+.button-view {
+    padding: 0;
+    margin: 0;
+    background: none;
+    border: #FFFFFF
+}
+
+.button-view::after {
+    border: none;
+    outline: none;
+}
+
+button[size=mini] {
+    background: none;
+    padding: 0;
+}
+
 .item-right image {
     height: 40rpx;
     width: 40rpx;
