--- a/pages/billBoard/billBoard.wxss
+++ b/pages/billBoard/billBoard.wxss
@@ -53,15 +53,15 @@ page {
 
 .center {
     margin-top: -60rpx;
-    background-image: url(https://www./wximages/phgtop.png);
+    background-image: url(https://www.nuochewang.net/wximages/phgtop.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
 
 .user-name {
     width: 100%;
-    height: 40rpx;
-    line-height: 40rpx;
+    height: 65rpx;
+    line-height: 65rpx;
     font-size: 32rpx;
     color: #666666;
     text-align: center
@@ -78,8 +78,8 @@ page {
 
 .user-pice {
     width: 100%;
-    height: 50rpx;
-    line-height: 50rpx;
+    height: 75rpx;
+    line-height: 75rpx;
     font-size: 36rpx;
     color: red;
     /* color: #333333; */
@@ -91,9 +91,16 @@ page {
     width: 100%;
     background: #eceef3;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     color: #999999;
     font-size: 32rpx
+}
+
+.thead-td-1,
+.thead-td-2 {
+    flex-basis: 40%;
+    text-align: center
 }
 
 .td-1 {
@@ -102,17 +109,21 @@ page {
 }
 
 .td-2 {
-    flex-basis: 25%;
-    text-align: center
+    flex-basis: 40%;
+    /* text-align: center */
+    display: flex;
+    align-items: center
+}
+
+.avatarUrl {
+    width: 50rpx;
+    height: 50rpx;
+    border-radius: 25rpx;
+    margin-right: 10rpx
 }
 
 .td-3 {
-    flex-basis: 25%;
-    text-align: center
-}
-
-.td-4 {
-    flex-basis: 30%;
+    flex-basis: 40%;
     text-align: center
 }
 
