--- a/pages/orderList/orderList.wxss
+++ b/pages/orderList/orderList.wxss
@@ -1,115 +1,129 @@
 /* pages/orderList/orderList.wxss */
 
 page {
-  background-color:#eceef3;
+    background-color: #eceef3;
 }
 
 .scroll-view {
-  width: 100%;
-  height: 100%;
-  border-top: 1rpx solid #eeeeee;
-  background-color: #f7f6f6;
-  position: absolute;
-  top: 0;
-  left: 0;
+    width: 100%;
+    height: 100%;
+    border-top: 1rpx solid #eeeeee;
+    background-color: #f7f6f6;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.order-list {
-  
-}
+.order-list {}
 
-.order-margin{
-  width:100%;
-  height:20rpx;
+.order-margin {
+    width: 100%;
+    height: 20rpx;
 }
 
 .order {
-    height:280rpx;
+    height: 280rpx;
     width: 100%;
     justify-content: space-between;
     background: #FFFFFF;
 }
 
 .order-top {
-  height:78rpx;
-  width:100%;
-  color:#666;
-  font-size:26rpx;
-  line-height:78rpx;
-  border-bottom:2rpx solid #f3f3f3;
+    height: 78rpx;
+    width: 100%;
+    color: #666;
+    font-size: 26rpx;
+    line-height: 78rpx;
+    border-bottom: 2rpx solid #f3f3f3;
 }
 
-.order-top .order-time{
-  float:left;  
-  margin-left:40rpx;
+.order-top .order-time {
+    float: left;
+    margin-left: 20rpx;
 }
 
-.order-top .order-success{
-  float:right;
-  margin-right:40rpx;
+.order-top .order-not-success {
+    margin-top: 15rpx;
+    float: right;
+    margin-right: 40rpx;
+    height: 40rpx;
+    line-height: 40rpx;
+    font-size: 30rpx;
+    border: #dddddd 1rpx solid;
+    border-radius: 20rpx;
+    padding: 0 10rpx;
+    box-sizing: border-box;
+    color: #333333
 }
 
-.order-top .order-unpay{
-  float:right;
-  color:#de5c5f;
-  margin-right:40rpx;
+.order-top .order-success {
+    float: right;
+    margin-right: 40rpx;
 }
 
-.order-btm{
-  height:200rpx;
-  width:100%;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:#FFFFFF;
+.order-top .order-unpay {
+    float: right;
+    color: #de5c5f;
+    margin-right: 40rpx;
 }
 
-.order-btm .order-btm-left{
-  flex-basis: 28%;
-  height:130rpx;
-  text-align: center;
+.order-btm {
+    height: 200rpx;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #FFFFFF;
+    padding-right: 30rpx;
+    box-sizing: border-box
 }
 
-.order-btm .order-btm-left image{
-  height: 130rpx;
-  width: 130rpx
+.order-btm .order-btm-left {
+    flex-basis: 28%;
+    height: 130rpx;
+    text-align: center;
 }
 
-.order-btm .order-btm-mod{
-  flex-basis: 60%;
+.order-btm .order-btm-left image {
+    height: 130rpx;
+    width: 130rpx
 }
 
-.order-btm .order-btm-mod .tit{
-  color:#000;
-  font-size:32rpx;
-  line-height:60rpx;
+.order-btm .order-btm-mod {
+    flex-basis: 60%;
 }
 
-.order-btm .order-btm-mod .oth{
-  color:#666;
-  font-size:26rpx;
-  line-height:40rpx;
+.order-btm .order-btm-mod .tit {
+    color: #000;
+    font-size: 32rpx;
+    line-height: 60rpx;
 }
 
-.order-btm .order-btm-mod .oth .oth-txt{
-  float:left;
-  margin-right:32rpx;
+.order-btm .order-btm-mod .oth {
+    color: #666;
+    font-size: 26rpx;
+    line-height: 40rpx;
 }
 
-.order-btm .order-btm-mod .oth .oth-num{
-  color:#333;
-  margin-right:32rpx;
+.order-btm .order-btm-mod .oth .oth-txt {
+    float: left;
+    margin-right: 32rpx;
 }
 
-.order-btm .order-btm-right{
-  flex-basis: 12%;
-  font-size:26rpx;
-  color:#333;
-  height:130rpx;
-  text-align: left;
+.order-btm .order-btm-mod .oth .oth-num {
+    color: #333;
+    margin-right: 32rpx;
 }
 
-.order-btm .order-btm-right image{
-  height: 90rpx;
-  width: 90rpx
+.order-btm .order-btm-right {
+    flex-basis: 12%;
+    font-size: 26rpx;
+    color: #333;
+    height: 130rpx;
+    text-align: left;
+}
+
+.order-btm .order-btm-right image {
+    height: 90rpx;
+    width: 90rpx
 }
