--- a/pages/putForward/putForward.wxss
+++ b/pages/putForward/putForward.wxss
@@ -8,7 +8,7 @@ page {
     width: 100%;
     height: 250rpx;
     background-color: #fff;
-    margin-top: 60rpx;
+    margin-top: 30rpx;
     padding-top: 40rpx;
     padding-bottom: 70rpx;
     text-align: center;
@@ -40,4 +40,110 @@ page {
 .content .lanbei {
     border: #3b5998;
     background-color: #3b5998;
+}
+
+.incomeDetail {
+    width: 100%;
+    background-color: #eceef3;
+}
+
+.Detail-title {
+    width: 690rpx;
+    height: 120rpx;
+    margin-left: 30rpx;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left {
+    height: 120rpx;
+    display: flex;
+    flex-direction: column;
+}
+
+.big-text {
+    height: 70rpx;
+    line-height: 70rpx;
+    font-size: 40rpx;
+    color: #333333;
+    padding-top: 15rpx;
+    box-sizing: border-box;
+}
+
+.small-text {
+    height: 50rpx;
+    line-height: 50rpx;
+    font-size: 30rpx;
+    color: #666666;
+}
+
+.right {
+    height: 120rpx;
+    display: flex;
+    align-items: center
+}
+
+.right image {
+    width: 48rpx;
+    height: 42rpx;
+}
+
+.Detail-list {
+    min-height: 1rpx;
+    width: 100%;
+    background: #fff
+}
+
+.tbody {
+    height: 105rpx;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background: #FFFFFF;
+    color: #666666;
+    font-size: 34rpx;
+    border-bottom: 1rpx solid #EEEEEE
+}
+
+.td-1 {
+    flex-basis: 15%;
+    display: flex;
+    align-items: center;
+    text-align: center
+}
+
+.avatarUrl {
+    width: 70rpx;
+    height: 70rpx;
+    border-radius: 35rpx;
+    margin: 0 20rpx
+}
+
+.td-2 {
+    flex-basis: 35%;
+    display: flex;
+    flex-direction: column;
+    height: 105rpx;
+}
+
+.s-td-1 {
+    height: 50rpx;
+    line-height: 50rpx;
+    font-size: 30rpx;
+    color: #333333;
+    padding-top: 15rpx;
+    box-sizing: border-box;
+}
+
+.s-td-2 {
+    height: 55rpx;
+    line-height: 55rpx;
+    font-size: 24rpx;
+    color: #666666;
+}
+
+.td-3 {
+    flex-basis: 50%;
+    text-align: right;
+    margin: 0 20rpx
 }
